@@ -1,5 +1,10 @@
 2001-06-13  Dave Peticolas  <dave@krondo.com>
 
+	* src/gnome/glade/userpass.glade: new file for old
+	username/password dialog
+
+	* src/gnome/dialog-userpass.c: use libglade
+
 	* src/gnome/dialog-column-view.c: more libglade work
 
 2001-06-12  Dave Peticolas  <dave@krondo.com>
